--- a/client/app/addTournament/addTournament.html
+++ b/client/app/addTournament/addTournament.html
@@ -9,15 +9,42 @@
     <label class="control-label col-sm-3" for="type">Select type:</label>
       <div class="col-sm-3">
         <select class="form-control" id="type" ng-model="trny.type">
-        <option>Casual</option>
-        <option>GNK</option>
-        <option>Store Champs</option>
-        <option>ANRPC</option>
-        <option>Regionals</option>
-        <option>Nationals</option>
-        <option>Worlds</option>
-      </select>
+          <option>Casual</option>
+          <option>GNK</option>
+          <option>Store Champs</option>
+          <option>ANRPC</option>
+          <option>Regionals</option>
+          <option>Nationals</option>
+          <option>Worlds</option>
+        </select>
       </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-3" for="date">Date:</label>
+    <div class="col-sm-3">
+      <input type="date" class="form-control" id="date" placeholder="Enter tournament date" ng-model="trny.date">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-3" for="postCode">Post Code/Zip</label>
+    <div class="col-sm-3">
+      <input type="text" class="form-control" id="postCode"
+             placeholder="tournament post code/Zip" ng-model="trny.postCode">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-3" for="link">Event link/Facebook</label>
+    <div class="col-sm-3">
+      <input type="url" class="form-control" id="link"
+             placeholder="where can we find out more" ng-model="trny.link">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-3" for="desc">Description</label>
+    <div class="col-sm-3">
+      <textarea class="form-control" id="desc"
+             placeholder="tell us more" ng-model="trny.desc"></textarea>
+    </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-9">
